--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2021"
 rand = "0.8.5"
 once_cell = "1.17.0"
 bitflags = "1.3.2"
+
+[dev-dependencies]
+criterion = "0.4.0"
+
+[[bench]]
+name = "movegen"
+harness = false
