--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,5 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
-once_cell = "1.17.0"
-bitflags = "1.3.2"
-smallvec = "1.10.0"
+bitflags = "2.3.1"
+num_enum = "0.6.1"
