--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.5"
 bitflags = "2.3.1"
 num_enum = "0.6.1"
 derive_more = "0.99.17"
+tinyrand = "0.5.0"
+tinyrand-std = "0.5.0"
+array-init = "2.1.0"
