--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2021"
 bitflags = "2.3.1"
 num_enum = "0.6.1"
 derive_more = "0.99.17"
-tinyrand = "0.5.0"
-tinyrand-std = "0.5.0"
 array-init = "2.1.0"
+rand = "0.8.5"
+once_cell = "1.18.0"
