--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ derive_more = "0.99.17"
 array-init = "2.1.0"
 rand = "0.8.5"
 once_cell = "1.18.0"
+smallvec = "1.10.0"
 
 [profile.dev]
 opt-level = 1
