--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 bitflags = "2.3.3"
-num_enum = "0.6.1"
+primitive_enum = "1.1.1"
 derive_more = "0.99.17"
 rand = "0.8.5"
 once_cell = "1.18.0"
@@ -19,3 +19,4 @@ opt-level = 1
 opt-level = 3
 lto = true
 codegen-units = 1
+panic = "abort"
