--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,5 +31,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Test
-      run: cargo test --verbose
+    - name: Install cargo-llvm-cov
+      uses: taiki-e/install-action@cargo-llvm-cov
+
+    - name: Test with coverage
+      run: cargo llvm-cov --all-features --workspace --codecov --output-path codecov.json
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        files: codecov.json
+        fail_ci_if_error: true
