--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,10 @@ opt-level = 3
 lto = true
 codegen-units = 1
 panic = "abort"
+
+[dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
+
+[[bench]]
+name = "moves"
+harness = false
