--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,11 @@ opt-level = 1
 opt-level = 3
 lto = true
 codegen-units = 1
+panic = "abort"
+
+[dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
+
+[[bench]]
+name = "movegen"
+harness = false
