--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
+# Build artifacts
 /target
+
+# IDE files
 /.vscode
+
+# External tooling
 fast-chess/
 lichess-bot/
+
+# Performance outputs
+flamegraph.svg
+perf.data*
