--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,18 @@ opt-level = 1
 opt-level = 3
 lto = true
 codegen-units = 1
-panic = "abort"
+debug = true
+
+[profile.bench]
+debug = true
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
 
 [[bench]]
 name = "movegen"
+harness = false
+
+[[bench]]
+name = "eval"
 harness = false
