Switch LazyCell to Ctor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ bitflags = "2.4.1"
 primitive_enum = "1.2.0"
 derive_more = "0.99.17"
 rand = "0.8.5"
-once_cell = "1.19.0"
+ctor = "0.2.6"
 
 [profile.dev]
 opt-level = 1
