--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ primitive_enum = "1.2.0"
 derive_more = "0.99.17"
 rand = "0.8.5"
 ctor = "0.2.6"
+smallvec = "1.12.0"
 
 [profile.dev]
 opt-level = 1
