--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 ctor = "0.2.8"
+derive_more = {version = "1.0.0", features = ["full"]}
 primitive_enum = "1.2.0"
 rand = "0.8.5"
+rstest = "0.23.0"
