Update CI to accommodate script dir change

--- a/.github/workflows/gauntlet.yml
+++ b/.github/workflows/gauntlet.yml
@@ -21,7 +21,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set up script permissions
-        run: chmod +x ./gauntlet.sh
+        run: chmod +x ./scripts/gauntlet.sh
 
       - name: Set up local master branch
         run: git fetch origin master:master
@@ -30,7 +30,7 @@ jobs:
         env:
           CURRENT_BRANCH: ${{ github.head_ref }}
         run: |
-          ./gauntlet.sh || echo "GAUNTLET_FAILED=1" >> $GITHUB_ENV
+          ./scripts/gauntlet.sh || echo "GAUNTLET_FAILED=1" >> $GITHUB_ENV
 
       - uses: mshick/add-pr-comment@v2
         with:
@@ -53,7 +53,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set up script permissions
-        run: chmod +x ./gauntlet.sh
+        run: chmod +x ./scripts/gauntlet.sh
 
       - name: Set up local master branch
         run: git fetch origin master:master
@@ -62,7 +62,7 @@ jobs:
         env:
           CURRENT_BRANCH: ${{ github.head_ref }}
         run: |
-          ./gauntlet.sh master 1 4 256 100 || echo "GAUNTLET_FAILED=1" >> $GITHUB_ENV
+          ./scripts/gauntlet.sh master 1 4 256 100 || echo "GAUNTLET_FAILED=1" >> $GITHUB_ENV
 
       - uses: mshick/add-pr-comment@v2
         with:
@@ -85,7 +85,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set up script permissions
-        run: chmod +x ./gauntlet.sh
+        run: chmod +x ./scripts/gauntlet.sh
 
       - name: Set up local release tag
         run: git fetch origin $(git describe --tags --abbrev=0)
@@ -94,7 +94,7 @@ jobs:
         env:
           CURRENT_BRANCH: ${{ github.head_ref }}
         run: |
-          ./gauntlet.sh $(git describe --tags --abbrev=0) || echo "GAUNTLET_FAILED=1" >> $GITHUB_ENV
+          ./scripts/gauntlet.sh $(git describe --tags --abbrev=0) || echo "GAUNTLET_FAILED=1" >> $GITHUB_ENV
 
       - uses: mshick/add-pr-comment@v2
         with:
@@ -117,7 +117,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set up script permissions
-        run: chmod +x ./gauntlet.sh
+        run: chmod +x ./scripts/gauntlet.sh
 
       - name: Set up local release tag
         run: git fetch origin $(git describe --tags --abbrev=0)
@@ -126,7 +126,7 @@ jobs:
         env:
           CURRENT_BRANCH: ${{ github.head_ref }}
         run: |
-          ./gauntlet.sh $(git describe --tags --abbrev=0) 1 4 256 100 || echo "GAUNTLET_FAILED=1" >> $GITHUB_ENV
+          ./scripts/gauntlet.sh $(git describe --tags --abbrev=0) 1 4 256 100 || echo "GAUNTLET_FAILED=1" >> $GITHUB_ENV
 
       - uses: mshick/add-pr-comment@v2
         with:
