--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,17 @@ edition = "2021"
 [dependencies]
 ctor = "0.2.8"
 derive_more = { version = "1.0.0", features = ["full"] }
-divan = "0.1.15"
 primitive_enum = "1.2.0"
 rand = "0.8.5"
 
 [dev-dependencies]
+divan = "0.1.15"
 rstest = "0.23.0"
 
 [[bench]]
 name = "position"
+harness = false
+
+[[bench]]
+name = "moves"
 harness = false
