--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,14 @@ primitive_enum = "1.2.0"
 rand = "0.8.5"
 
 [dev-dependencies]
-divan = "0.1.15"
 rstest = "0.23.0"
 
-[[bench]]
-name = "position"
-harness = false
+[profile.dev]
+opt-level = 1
 
-[[bench]]
-name = "moves"
-harness = false
+[profile.release]
+opt-level = 3
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+strip = "debuginfo"
