--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,13 @@ version = "2.0.0-alpha"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.219", features = ["derive"] }
 ctor = "0.2.8"
 derive_more = { version = "1.0.0", features = ["full"] }
 primitive_enum = "1.2.0"
 rand = "0.8.5"
 arrayvec = "0.7.6"
+serde_json = "1.0.140"
 
 [dev-dependencies]
 rstest = "0.23.0"
