Backport first NN from Camel 2.x

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ derive_more = "0.99.17"
 rand = "0.8.5"
 ctor = "0.2.8"
 rayon = "1.10.0"
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 
 [profile.dev]
@@ -28,10 +28,6 @@ criterion = { version = "0.5.1", features = ["html_reports"] }
 
 [[bench]]
 name = "movegen"
-harness = false
-
-[[bench]]
-name = "eval"
 harness = false
 
 [[bench]]
