--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,11 @@ jobs:
       - name: Lint Rust
         run: cargo clippy --verbose -- -D warnings
 
+      - name: Install cargo-sort
+        uses: taiki-e/install-action@cargo-sort
+
       - name: Lint Cargo.toml
-        run: |
-          cargo install cargo-sort
-          cargo sort --check
+        run: cargo sort --check
 
       - name: Lint Shell
         uses: ludeeus/action-shellcheck@2.0.0
